--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -145,5 +145,25 @@ body {
 
 #mainContent {
   height: 100%;
+  max-height: 100%;
+  overflow-y: scroll;
   background-color: #D0D0D0;
+}
+
+#feedContainer {
+  width: 98%;
+  height: 100%;
+  margin: auto;
+  margin-top: 1em;
+}
+
+.feedItem {
+  background-color: white;
+  width: 100%;
+  height: 150px;
+  border-bottom: 1px solid #A0A0A0;
+}
+
+.feedItem:first-child {
+  border-top: none;
 }
