--- a/css/styles.css
+++ b/css/styles.css
@@ -162,6 +162,8 @@ body {
   width: 100%;
   height: 150px;
   border-bottom: 1px solid #A0A0A0;
+  display: grid;
+  grid-template-columns: 1fr 2fr
 }
 
 .feedItem:first-child {
