working on registration page

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,1 +1,27 @@
-<h1>Example App: Home</h1>
+<div class="container">
+  <div class="row pt-5">
+    <div class="col-12 pt-5 text-center" id="appName">AppName</div>
+  </div>
+
+  <div class="row pt-4 justify-content-center">
+    <div class="col-10">
+      <input class="input" type="text" name="username" placeholder="Username">
+    </div>
+
+    <div class="col-10 pt-3">
+      <input class="input" type="text" name="password" placeholder="Password">
+    </div>
+
+    <div class="col-10 pt-3">
+      <button class="input logIn">Log In</button>
+    </div>
+
+    <div class="col-10 pt-3">
+      <button class="reset">Forgot Password?</button>
+    </div>
+  </div>
+
+  <div class="row fixed-bottom">
+    <button class="signUp pb-3">Don't have an account? <span style="color:rgb(178, 133, 245)">Sign up</span></button>
+  </div>
+</div>
