added login and signup page

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,15 +5,15 @@
 
   <div class="row pt-4 justify-content-center">
     <div class="col-10">
-      <input class="input" type="text" name="username" placeholder="Username">
+      <input class="input" id="userInp" type="text" name="username" placeholder="Username">
     </div>
 
     <div class="col-10 pt-3">
-      <input class="input" type="text" name="password" placeholder="Password">
+      <input class="input" id="passInp" type="password" name="password" placeholder="Password">
     </div>
 
     <div class="col-10 pt-3">
-      <button class="input logIn">Log In</button>
+      <button class="input logIn" id="submit">Log In</button>
     </div>
 
     <div class="col-10 pt-3">
@@ -22,6 +22,6 @@
   </div>
 
   <div class="row fixed-bottom">
-    <button class="signUp pb-3">Don't have an account? <span style="color:rgb(178, 133, 245)">Sign up</span></button>
+    <a href="/register" class="signUpPg pb-3 text-center">Don't have an account? <span style="color:rgb(178, 133, 245)">Sign up</span></a>
   </div>
 </div>
