--- a/public/css/login.css
+++ b/public/css/login.css
@@ -6,6 +6,16 @@ html, body {
   font-family: 'Roboto', sans-serif;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:active, a:visited, a:focus {
+  color: black;
+  text-decoration:none;
+}
+
 #appName {
   font-size: 2em;
   font-family: 'Pacifico', cursive;
@@ -21,6 +31,7 @@ html, body {
   padding: 5px 10px;
   outline: none;
   color: white;
+  font-weight: 300;
 }
 
 .input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
@@ -28,12 +39,19 @@ html, body {
   font-weight: 200;
 }
 
-.logIn {
+.logIn, .signUp {
   background-color: rgba(255, 255, 255, 0);
   width: 100%;
   color: white;
   border: 2px solid rgba(255, 255, 255, 0.8);
   font-weight: 300;
+}
+
+.logIn:focus, .signUp:focus {
+  background-color: white;
+  color: rgb(61, 61, 61);
+  outline: none;
+  transition: 0.15s;
 }
 
 .reset {
@@ -43,11 +61,21 @@ html, body {
   font-weight: 300;
 }
 
-.signUp {
+.signUpPg, .logInPg {
   background-color: rgba(187, 187, 187, 0);  
   border: none;
   font-size: 0.9em;
   width: 100%;
   color: rgb(61, 61, 61);
+  font-weight: 300;
+}
+
+.register:focus {
+  outline: none;
+}
+
+/* Register Styles */
+#appDesc {
+  color: white;
   font-weight: 300;
 }
