--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row pt-5">
-    <div class="col-12 pt-5 text-center" id="appName">AppName</div>
+    <div class="col-12 pt-5 text-center appNameLogin">AppName</div>
   </div>
 
   <form class="row pt-4 justify-content-center" action="/auth/login" method="POST">
