--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row pt-5 justify-content-center">
-    <div class="col-12 text-center" id="appName">AppName</div>
+    <div class="col-12 text-center appNameLogin">AppName</div>
     <div class="col-9 pt-3 text-center" id="appDesc">Sign up to connect with a network of teachers and resources</div>
   </div>
 
