--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 #topBar {
-  /* background-color: red; */
+  background-color: white;
   width: 100%;
   height: 100%;
 }
@@ -74,7 +74,7 @@ body {
 }
 
 #resourceForumBar {
-  /* background-color: yellow; */
+  background-color: white;
   width: 100%;
   height: 100%;
 }
