working on socket.io to create private chats

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -54,3 +54,5 @@
     <a href="/register" class="signUpPg pb-3 text-center">Don't have an account? <span style="color:rgb(178, 133, 245)">Sign up</span></a>
   </div>
 </div>
+
+<script src="/js/login.js"></script>
