added basic msging functionality

--- a/src/inbox.css
+++ b/src/inbox.css
@@ -183,7 +183,7 @@ body {
     display: inline-block;
 }
 
-.tim-agoe {
+.tim-ago {
     font-size: 0.8em;
     color: #9DAAB5;
     position: relative;
