added form for posting resource feed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,14 @@
 body {
   width: 100%;
   height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow-y: hidden;
+}
+
+#appContainer {
+  width: 100%;
+  height: 100vh;
   display: grid;
   grid-template-rows: 0.5fr 5fr 0.5fr;
   /* background-color: purple; */
@@ -8,7 +16,6 @@ body {
   padding: 0;
   overflow-y: hidden;
 }
-
 :root {
   --main-purple: #B885FE;
   --math-red: #ec644b;
@@ -37,7 +44,8 @@ body {
 #homeButton,
 #searchButton,
 #alertsButton,
-.subForumIcon {
+.subForumIcon,
+.formItemImageContainer {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -70,6 +78,7 @@ body {
   font-family: 'Lato';
   font-weight: lighter;
   font-size: 2em;
+  color: #707070;
 }
 
 #filterButton {
@@ -79,11 +88,13 @@ body {
 
 #postButton {
   /* background-color: yellow; */
+  grid-column-start: 5;
 }
 
 #filterButton i,
 #postButton i {
   font-size: 1.5em;
+  color: #808080;
 }
 
 #resourceForumBar {
@@ -107,6 +118,7 @@ body {
 }
 
 #forumButton {
+  color: #808080
 }
 
 #resourcesButton h1,
@@ -168,7 +180,8 @@ body {
 
 #feedContainer,
 #forumContainer,
-#individualFeedItem {
+#individualFeedItem,
+.formContainer {
   width: 98%;
   height: 100%;
   margin: auto;
@@ -197,7 +210,7 @@ body {
 
 
 .feedItem:last-child,
-.subForum:last-child {
+.subForum:last-child, {
   margin-bottom: 0.5em;
 }
 
@@ -225,13 +238,14 @@ body {
   font-family: 'Roboto';
   font-weight: lighter;
   letter-spacing: 1px;
+  color: #505050;
 }
 
 .itemTitle h2 {
   font-family: 'Roboto';
   font-weight: lighter;
   font-size: 1.1em;
-  opacity: 0.7;
+  color: #808080;
   letter-spacing: 1px;
 }
 
@@ -343,4 +357,213 @@ body {
 #subPostTitleContainer h1{
   font-family: 'Roboto';
   font-size: 1.3em;
+}
+
+
+#postFeedContainer {
+  height: 100%;
+  display: none;
+  grid-template-rows: 0.5fr 5fr;
+}
+
+.topBar {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+}
+
+.topBarGrid {
+  display: grid;
+  grid-template-columns: 15% 40% 27% 9% 9%;
+  border-bottom: 1px solid #D0D0D0;
+}
+
+.userIcon,
+.closeButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* vertically centering elements */
+}
+
+.closeButton {
+  grid-column-start: 5;
+}
+
+.closeButton i {
+  font-size: 1.5em;
+  color: #808080;
+}
+
+.userIcon {
+  /* background-color: red; */
+}
+
+.userIconCircle {
+  width: 45px;
+  height: 45px;
+  background-color: var(--main-purple);
+  border-radius: 50%;
+  margin: auto;
+}
+
+.backArrow {
+  display: none;
+  font-size: 1.5em;
+}
+
+.postFeedTitle {
+}
+
+.postFeedTitle h1 {
+  font-family: 'Lato';
+  font-weight: lighter;
+  font-size: 2em;
+  color: #707070;
+}
+
+.forumScroll {
+  overflow-y: scroll;
+}
+
+.formContainer {
+  width: 80%;
+
+}
+
+.formGrid {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-gap: 2em;
+}
+
+label {
+  font-family: 'Roboto';
+  font-weight: 200;
+}
+
+label h1 {
+  font-size: 1em;
+  letter-spacing: 2px;
+  font-family: 'Lato';
+  font-weight: bolder;
+  color: white;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+#radioGridContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+}
+
+#formRequest {
+  background-color: var(--main-purple);
+  height: 100%;
+  border-radius: 3px;
+}
+
+#formProvide {
+  background-color: var(--main-purple);
+  height: 100%;
+  border-radius: 3px;
+}
+
+.radioContainer {
+  display: block;
+  color: black;
+  font-size: 1em;
+}
+
+/* Hide the browser's default radio button */
+
+.radioContainer input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+
+/* Create a custom radio button */
+
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0);
+    color: transparent;
+    border-radius: 10px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+input:checked ~ .checkmark {
+}
+
+.checkmark:after {
+    content: '';
+    padding: 10px;
+    position: absolute;
+    display: none;
+}
+
+.checkmark p {
+    color: white;
+    font-size: 20px;
+}
+
+#formTitleInput,
+#formDescriptionInput {
+  width: 100%;
+}
+
+#formDescriptionInput {
+  width: 100%;
+  min-width: 100%;
+  max-width: 100%;
+  height: 100px;
+  padding: 0px;
+  border-radius: 4px;
+}
+
+.formItemImage {
+  height: 200px;
+}
+
+.formItemImageContainer {
+  width: 100%;
+  height: 100%;
+  background-color: #C0C0C0;
+  border-radius: 6px;
+}
+
+.formItemImage i {
+  font-size: 4em;
+  color: gray;
+}
+
+input[type="submit"] {
+  border: none;
+  background-color: var(--main-purple);
+  padding: 10px;
+  border-radius: 5px;
+  color: white;
+  width: 70%;
+  margin: auto;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  text-transform: uppercase;
+  font-family: 'Lato';
+  font-size: 1em;
+  letter-spacing: 2px;
+}
+
+#postForumContainer {
+  height: 100%;
+  display: none;
+  grid-template-rows: 0.5fr 5fr;
 }
