started on forum form

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -517,8 +517,10 @@ input:checked ~ .checkmark {
 }
 
 #formTitleInput,
-#formDescriptionInput {
+#formDescriptionInput,
+#formForumInput {
   width: 100%;
+  padding: 0px;
 }
 
 #formDescriptionInput {
@@ -526,7 +528,6 @@ input:checked ~ .checkmark {
   min-width: 100%;
   max-width: 100%;
   height: 100px;
-  padding: 0px;
   border-radius: 4px;
 }
 
