--- a/public/css/inbox.css
+++ b/public/css/inbox.css
@@ -36,11 +36,11 @@ body {
   
   #topBarGrid {
     display: grid;
-    grid-template-columns: 15% 40% 1fr 18%;
+    grid-template-columns: 15% 1fr 18%;
   }
   
   #userIcon,
-  #appName,
+  /* #appName, */
   #filterButton,
   #postButton,
   #homeButton,
@@ -65,11 +65,12 @@ body {
   }
   
   #appName {
-    /* background-color: green; */
+    box-sizing: border-box;
+    padding-left: 1em;
   }
   
   #appName h1 {
-    text-align: center;
+    text-align: left;
     font-family: 'Lato';
     font-weight: lighter;
     font-size: 2em;
@@ -115,12 +116,10 @@ body {
   }
   
   #bottomBar {
-    /* background-color: orange; */
+    height: 3em;
     width: 100%;
-    /* height: 100%; */
     border-top: 1px solid #A0A0A0;
-    /* position: absolute;
-    bottom: 0; */
+    height: 3em;
   }
   
   #bottomBarGrid {
@@ -244,7 +243,7 @@ body {
     grid-template-columns: 0.5fr 2fr 0.5fr;
 }
 
-.msgBackButton, .user-name {
+.msgBackButton {
     margin: auto;
 }
 
@@ -253,12 +252,16 @@ body {
 }
 
 .user-name {
-    font-size: 1.5em;
     font-family: 'Lato';
 }
 
 #userBar {
     background-color: var(--main-purple);
+}
+
+#userBar .user-name {
+    font-size: 1.5em;
+    margin: auto;
 }
 
 #sendContainer {
@@ -352,11 +355,17 @@ body {
 }
 
 #sendButton {
-    font-size: 1.7em;
-    margin: auto;
+    width: 100%;
+    height: 100%;
+    text-align: center;
 }
 
-#sendButton:hover {
+#sendButton i{
+    font-size: 1.7em;
+    line-height: calc(100vh * (0.5/6.75));
+}
+
+#sendButton i:hover {
     color: var(--main-purple);
 }
 
@@ -398,6 +407,8 @@ body {
     border: 1px solid black !important;
     padding-left: 1em; 
     box-sizing: border-box;
+    font-family: 'Lato';
+    font-size: 1em;
 }
  
 #friendSearchInput:focus {
