--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -27,5 +27,6 @@
     crossorigin="anonymous"></script>
   <script type="text/javascript" src="/js/app.js"></script>
   <script type="text/javascript" src="/js/chat.js"></script>
+  <script src="/js/login.js"></script>
 </body>
 </html>
