--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -77,7 +77,7 @@ body {
   text-align: center;
   font-family: 'Lato';
   font-weight: lighter;
-  font-size: 2em;
+  font-size: 1.7em;
   color: #707070;
 }
 
@@ -92,7 +92,8 @@ body {
 }
 
 #filterButton i,
-#postButton i {
+#postButton i,
+#backArrow {
   font-size: 1.5em;
   color: #808080;
 }
@@ -127,7 +128,7 @@ body {
   text-align: center;
   font-family: 'Lato';
   font-weight: lighter;
-  font-size: 1.5em;
+  font-size: 1.25em;
 }
 
 #bottomBar {
@@ -175,7 +176,7 @@ body {
 
 #mainContent {
   overflow-y: scroll;
-  background-color: #C0C0C0;
+  background-color: #E0E0E0;
 }
 
 #feedContainer,
@@ -385,12 +386,12 @@ body {
 }
 
 .subForumInfo h1 {
-  font-size: 1.3em;
+  font-size: 1.1em;
   margin-bottom: 10px;
 }
 
 .subForumInfo h2 {
-  font-size: 1em;
+  font-size: 0.9em;
   margin-top: 10px;
   opacity: 0.8;
 }
@@ -403,8 +404,8 @@ body {
 
 .subPost {
   background-color: white;
-  border-top: 1px solid #A0A0A0;
-  border-bottom: 1px solid #A0A0A0;
+  border-top: 1px solid #D0D0D0;
+  border-bottom: 1px solid #D0D0D0;
 }
 
 
@@ -425,7 +426,7 @@ body {
 
 #subPostTitleContainer h1{
   font-family: 'Roboto';
-  font-size: 1.2em;
+  font-size: 1.05em;
   font-weight: normal;
   width: 80%;
   margin: auto;
