--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -33,6 +33,8 @@ body {
 
 #topBarGrid {
   display: grid;
+  width: 93%;
+  margin: auto;
   grid-template-columns: 15% 40% 27% 9% 9%;
 }
 
@@ -164,7 +166,7 @@ body {
 #homeButton i,
 #searchButton i,
 #alertsButton i {
-  font-size: 2em;
+  font-size: 1.45em;
   transition: 0.3s;
 }
 
